Added product to project
