# src/models/product/index.ts
@@ -1,0 +1,1 @@
+export {ProductRequest, Product, ProductList} from "./product"
