# src/models/product/product.ts
@@ -1,0 +1,13 @@
+export interface Product {
+    name: string;
+    unit_price: number;
+}
+
+export interface ProductRequest {
+     name: string;
+     unit_price: number;
+}
+  
+export interface ProductList{
+    data: Product[];
+}
